--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -4,6 +4,7 @@
 body {
 	min-width: 320px;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	background: #f4fff4;
 }
 
 .on {
@@ -18,6 +19,10 @@ body {
 
 .main-container {
 	max-width: 900px;
+	background: #FFF;
+	box-shadow: 1px 1px 2px;
+	padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 /*header*/
@@ -33,6 +38,7 @@ body {
 .nav-costom {
 	box-shadow: 0px 4px 4px;
 	margin-bottom: 20px;
+	background: #fff;
 }
 
 .nav-costom>button {
@@ -60,7 +66,7 @@ aside.leftside {
 	background-color: rgba(255, 255, 255, 1);
 	z-index: 1001;
 	/* transition: left 50ms linear; */
-	border: 1px solid #000;
+	/*border: 1px solid #000;*/
 	overflow: auto;
 	display: none;
 	top: 0px;
@@ -126,9 +132,14 @@ aside.leftside h5.side-header>img {
 
 h5.side-header {
 	padding: 10px;
-	box-shadow: 0px 2px 8px;
+	/*box-shadow: 0px 2px 8px;*/
 }
-
+aside.leftside .side-search{
+	display:none;
+}
+div.side-list{
+	min-height: 250px;
+}
 div.side-list a {
 	text-decoration: none;
 	color: #000;
@@ -194,7 +205,7 @@ div.searchList h3>span:after {
 }
 
 article>div.searchListEntity {
-	box-shadow: 2px 2px 4px;
+	box-shadow: 1px 1px 2px;
 	margin: 10px 0px;
 	padding: 0px 30px;
 }
@@ -260,12 +271,68 @@ article > div.searchListEntity > div.list-body a.list-link > p.list-summary {
     word-break: break-all;
 }
 
+/*post*/
+#title_txt {
+	font-size: 25px;
+	height: 40px;
+}
+
+#tag_txt {
+	font-size: 18px;
+	height: 34px;
+}
+
+div.titleArea {
+	margin-bottom: 15px;
+}
+
+select#category_sel {
+	height: 34px;
+}
+
+article.entry.post {
+    /* font-size: 18px; */
+    font-size: 1rem;
+    /* overflow-wrap: break-word; */
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+article.entry.post p{
+	margin-bottom: 0px;
+}
+
+article.entry.post #article_contents{
+	min-height:300px;
+	height: calc(100vh - 300px);
+}
+
 /*Small devices (landscape phones, 576px and up)*/
-@media screen and (min-width: 576px) {
+@media screen and (max-width: 576px) {
+	.container-fluid {
+	    padding-right: 5px;
+	    padding-left: 5px;
+	}
+	.container-fluid {
+		padding: 0px;
+	}
+	.list-area-panel {
+		padding: 0px;
+	}
 }
 
 /*Medium devices (tablets, 768px and up)*/
-@media screen and ( min-width : 768px) {
+@media screen and (max-width: 768px) {
+	.container-fluid {
+	    padding-right: 5px;
+	    padding-left: 5px;
+	}
+	.container-fluid {
+		padding: 0px;
+	}
+	.list-area-panel {
+		padding: 0px;
+	}
 }
 
 /*Large devices (desktops, 992px and up)*/
@@ -273,10 +340,16 @@ article > div.searchListEntity > div.list-body a.list-link > p.list-summary {
 	.navbar-expand-lg .navbar-toggler {
 		display: inherit;
 	}
+	.main-container {
+		padding: 30px;
+	}
 }
 
 /*Extra large devices (large desktops, 1200px and up)*/
 @media screen and ( min-width : 1200px) {
+	body{
+		padding-top: 25px;
+	}
 	.menu-toggle {
 		display: none;
 	}
@@ -285,13 +358,20 @@ article > div.searchListEntity > div.list-body a.list-link > p.list-summary {
 	}
 	aside.leftside {
 		display: block;
-		top: 70px;
-		height: calc(100vh - 70px);
+		/*top: 70px;*/
+		height: calc(100vh);
+		left: calc((100vw /2) - 615px);
 	}
-	h5.side-header, .menu-close {
+	.menu-close {
 		display: none;
 	}
 	.menu-close-off {
 		display: block;
+	}
+	.navbar {
+		display: none;
+	}
+	aside.leftside .side-search{
+		display:block;
 	}
 }
