--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -1,9 +1,10 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap');
 /*common*/
 body {
 	min-width: 320px;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'Noto Sans JP', sans-serif;
 	background: #f4fff4;
 }
 
