--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -310,12 +310,60 @@ article.entry.post p{
 }
 
 article.entry.post #article_contents{
-	min-height:300px;
+	min-height: calc(100vh - 300px);
+	/*min-height:300px;*/
 	/*height: calc(100vh - 300px);*/
 }
 
 .categoryArea{
     font-size: 0.7rem;
+}
+
+#searchResultCount{
+	margin-left: 10px;
+    margin-right: 5px;	
+}
+
+#category-column{
+	font-size: 0.8rem;
+}
+
+img{
+	max-width: 100%;
+	border-radius: 5px;
+    cursor: pointer;
+    box-shadow:1px 2px 4px;
+}
+
+img:hover {
+    opacity: 0.7;
+}
+
+.modal {
+    padding-top: 100px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+}
+
+.close.img-type {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close.img-type:not(:disabled):not(.disabled) {
+    cursor: pointer;
+}
+
+.close.img-type:not(:disabled):not(.disabled) {
+    cursor: pointer;
 }
 
 /*Small devices (landscape phones, 576px and up)*/
@@ -325,7 +373,7 @@ article.entry.post #article_contents{
 	    padding-left: 5px;
 	}
 	.container-fluid {
-		padding: 0px;
+		padding: 5px;
 	}
 	.list-area-panel {
 		padding: 0px;
@@ -339,7 +387,7 @@ article.entry.post #article_contents{
 	    padding-left: 5px;
 	}
 	.container-fluid {
-		padding: 0px;
+		padding: 5px;
 	}
 	.list-area-panel {
 		padding: 0px;
