--- a/WebContent/css/post.css
+++ b/WebContent/css/post.css
@@ -1,26 +1,130 @@
 @charset "UTF-8";
-.titleArea h1{
-	border: 1px solid silver;
-    background-color: rgba(192, 192, 192, 0.38);
-    padding: 10px;
-    font-weight: bold;
-    font-size: 24px;
-    margin: 20px 0px;
-    text-align: left;
+
+/*post*/
+#title_txt {
+	font-size: 25px;
+	height: 40px;
 }
-article h2 > b{
-	border: 1px solid silver;
-    display: block;
-    padding: 10px;
-    font-size: 20px;
-    background: #f5f5f5;
+
+#tag_txt {
+	font-size: 18px;
+	height: 34px;
 }
-article h2 > b > span{
+
+div.titleArea {
+	margin-bottom: 15px;
+}
+
+select#category_sel {
+	height: 34px;
+}
+
+article.entry.post {
+	/* font-size: 18px; */
+	font-size: 1rem;
+	/* overflow-wrap: break-word; */
+	word-wrap: break-word;
+	word-break: break-all;
+}
+
+article.entry.post p {
+	margin-bottom: 0px;
+	font-size: 1rem;
+	line-height: 25px;
+}
+
+article.entry.post #article_contents {
+	min-height: calc(100vh - 300px);
+	/*min-height:300px;*/
+	/*height: calc(100vh - 300px);*/
+}
+
+.categoryArea {
+	font-size: 0.7rem;
+}
+
+#searchResultCount {
+	margin-left: 10px;
+	margin-right: 5px;
+}
+
+#category-column {
+	font-size: 0.8rem;
+}
+
+img {
+	max-width: 100%;
+	border-radius: 5px;
+	cursor: pointer;
+	box-shadow: 1px 2px 4px;
+}
+
+img:hover {
+	opacity: 0.7;
+}
+
+.modal {
+	padding-top: 100px;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.9);
+}
+
+.close.img-type {
+	position: absolute;
+	top: 15px;
+	right: 35px;
+	color: #f1f1f1;
+	font-size: 40px;
+	font-weight: bold;
+	transition: 0.3s;
+}
+
+.close.img-type:not (:disabled ):not (.disabled ) {
+	cursor: pointer;
+}
+
+.close.img-type:not (:disabled ):not (.disabled ) {
+	cursor: pointer;
+}
+
+.titleArea h1 {
+	border: 1px solid silver;
+	background-color: rgba(192, 192, 192, 0.38);
+	padding: 10px;
+	font-weight: bold;
+	font-size: 24px;
+	margin: 20px 0px;
+	text-align: left;
+}
+
+article h2>b {
+	border: 1px solid silver;
+	display: block;
+	padding: 10px;
+	font-size: 20px;
+	background: #f5f5f5;
+}
+
+article h2>b>span {
 	border-left: 5px solid black;
-    padding-left: 10px;
+	padding-left: 10px;
 }
-.hljs-ln-numbers .hljs-ln-line,
-.hljs-ln-code .hljs-ln-line {
-	font-size:11px;
-	line-height:12px;
+
+.hljs-ln-numbers .hljs-ln-line, .hljs-ln-code .hljs-ln-line {
+	font-size: 11px;
+	line-height: 12px;
+}
+
+.hljs {
+	padding: 3px;
+}
+
+@media screen and (max-width: 768px) {
+	main div.article {
+		/* font-size: 1.5rem; */
+		font-size: 1.2rem;
+	}
 }
