--- a/WebContent/css/post.css
+++ b/WebContent/css/post.css
@@ -57,6 +57,14 @@ img {
 	border-radius: 5px;
 	cursor: pointer;
 	box-shadow: 1px 2px 4px;
+	margin-top:10px;
+	margin-bottom:10px;
+}
+
+div.table-responsive {
+	margin-top: 10px;
+    margin-bottom: 10px;
+    box-shadow: 1px 2px 4px;
 }
 
 img:hover {
@@ -82,52 +90,14 @@ img:hover {
 	transition: 0.3s;
 }
 
-.close
-.img-type
-:not
- 
-(
-:disabled
- 
-)
-:not
- 
-(
-.disabled
- 
-)
-{
-cursor
-:
- 
-pointer
-;
-
-
+.close.img-type:not(:disabled):not(.disabled) {
+	cursor:pointer;
 }
-.close
-.img-type
-:not
- 
-(
-:disabled
- 
-)
-:not
- 
-(
-.disabled
- 
-)
-{
-cursor
-:
- 
-pointer
-;
 
-
+.close.img-type:not(:disabled):not(.disabled) {
+	cursor:pointer;
 }
+
 .titleArea h1 {
 	border: 1px solid silver;
 	background-color: rgba(192, 192, 192, 0.38);
