--- a/WebContent/css/post.css
+++ b/WebContent/css/post.css
@@ -135,6 +135,13 @@ div textarea[name=code]{
 	display:none;
 }
 
+pre.code-view{
+    margin-top: 10px;
+    margin-bottom: 10px;	
+    padding: 0px;
+    box-shadow: 1px 2px 4px;
+}
+
 @media screen and (max-width: 768px) {
 	main div.article {
 		/* font-size: 1.5rem; */
