--- a/WebContent/css/highlight.init.css
+++ b/WebContent/css/highlight.init.css
@@ -67,6 +67,9 @@ code {
 .hljs-ln-numbers .hljs-ln-line{
 	margin-right: 10px;
 }
+.hljs-comment, .hljs-quote {
+	color: #00ca03!important;
+}
 .code-title{
     /* background-color: #9280ff; */
     background-color: #e9e9e9;
