--- a/WebContent/css/post.css
+++ b/WebContent/css/post.css
@@ -103,7 +103,7 @@ img:hover {
 	background-color: rgba(192, 192, 192, 0.38);
 	padding: 10px;
 	font-weight: bold;
-	font-size: 30px;
+	font-size: 1.5rem;
 	margin: 20px 0px;
 	text-align: left;
 }
