--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -85,7 +85,7 @@ section.menu-back-layout {
 	z-index: 1000;
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 }
@@ -371,15 +371,28 @@ footer{
 	}
 }
 
+@media screen and ( max-width : 1199px) {
+	/*.navbar-expand-lg .navbar-toggler {
+		display: inherit;
+	}
+	.main-container {
+		padding: 30px;
+	}*/
+	body.mobile-fixed{
+		position: fixed;
+		width: 100%;
+	}
+}
+
 /*Large devices (desktops, 992px and up)*/
-@media screen and ( min-width : 992px) {
+/*@media screen and ( min-width : 992px) {
 	.navbar-expand-lg .navbar-toggler {
 		display: inherit;
 	}
 	.main-container {
 		padding: 30px;
 	}
-}
+}*/
 
 /*Extra large devices (large desktops, 1200px and up)*/
 @media screen and ( min-width : 1200px) {
