--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap');
+/*@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap');*/
 /*common*/
 body {
 	min-width: 320px;
