--- a/WebContent/css/post.css
+++ b/WebContent/css/post.css
@@ -265,8 +265,8 @@ div.table-responsive ul {
 		height: 90px; 
 	} 
 }
-@media(min-width: 1200px) { 
+/*@media(min-width: 1200px) { 
 	.adsens_responsive { 
 		width: 970px; height: 90px; 
 	} 
-}
+}*/
