--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -414,7 +414,7 @@ footer{
 	}
 	aside.leftside {
 		display: block;
-		/*top: 70px;*/
+		top: 25px;
 		/*height: calc(100vh);*/
 		height: 120%;
 		left: calc(( 100vw/ 2) - 615px);
