the disqus was added.

--- a/WebContent/css/post.css
+++ b/WebContent/css/post.css
@@ -302,6 +302,9 @@ div.table-responsive ul {
 .disqus-footer__wrapper{
     display: none;
 }
+.disqus-footer{
+    display: none;
+}
 #disqus_thread{
     margin:20px 0px;
 }
