--- a/WebContent/css/post.css
+++ b/WebContent/css/post.css
@@ -307,4 +307,7 @@ div.table-responsive ul {
 }
 #disqus_thread{
     margin:20px 0px;
+    border: 1px solid #ededed;
+    padding: 20px;
+    box-shadow: 1px 2px 4px;
 }
