--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -270,6 +270,8 @@ article>div.searchListEntity>div.list-body a.list-link:hover>h5 {
 
 .data-column-label, .date-column, .tag-column {
 	font-size: 0.70rem;
+	text-overflow: ellipsis;
+	word-break: break-word;
 }
 
 .p-category {
