--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -329,8 +329,8 @@ footer{
 
 .list-item:hover {
 	box-shadow: 1px 2px 3px;
-	margin-top: -1px;
-	margin-bottom: 1px;
+	/*margin-top: -1px;
+	margin-bottom: 1px;*/
 }
 
 /*Small devices (landscape phones, 576px and up)*/
